kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__comp_clause_recovery_5.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(\"{i: 1, j for i in [1,2,3]}\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "i",
                                                filename: "",
                                                line: 1,
                                                column: 1,
                                                end_line: 1,
                                                end_column: 2,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 2,
                            },
                        ),
                        value: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 4,
                            end_line: 1,
                            end_column: 5,
                        },
                        operation: Union,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 5,
                },
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "j",
                                                filename: "",
                                                line: 1,
                                                column: 7,
                                                end_line: 1,
                                                end_column: 8,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 7,
                                end_line: 1,
                                end_column: 8,
                            },
                        ),
                        value: Node {
                            node: Compare(
                                Compare {
                                    left: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    Node {
                                                        node: "i",
                                                        filename: "",
                                                        line: 1,
                                                        column: 13,
                                                        end_line: 1,
                                                        end_column: 14,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 13,
                                        end_line: 1,
                                        end_column: 14,
                                    },
                                    ops: [
                                        In,
                                    ],
                                    comparators: [
                                        Node {
                                            node: List(
                                                ListExpr {
                                                    elts: [
                                                        Node {
                                                            node: NumberLit(
                                                                NumberLit {
                                                                    binary_suffix: None,
                                                                    value: Int(
                                                                        1,
                                                                    ),
                                                                },
                                                            ),
                                                            filename: "",
                                                            line: 1,
                                                            column: 19,
                                                            end_line: 1,
                                                            end_column: 20,
                                                        },
                                                        Node {
                                                            node: NumberLit(
                                                                NumberLit {
                                                                    binary_suffix: None,
                                                                    value: Int(
                                                                        2,
                                                                    ),
                                                                },
                                                            ),
                                                            filename: "",
                                                            line: 1,
                                                            column: 21,
                                                            end_line: 1,
                                                            end_column: 22,
                                                        },
                                                        Node {
                                                            node: NumberLit(
                                                                NumberLit {
                                                                    binary_suffix: None,
                                                                    value: Int(
                                                                        3,
                                                                    ),
                                                                },
                                                            ),
                                                            filename: "",
                                                            line: 1,
                                                            column: 23,
                                                            end_line: 1,
                                                            end_column: 24,
                                                        },
                                                    ],
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 18,
                                            end_line: 1,
                                            end_column: 25,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 13,
                            end_line: 1,
                            end_column: 25,
                        },
                        operation: Override,
                    },
                    filename: "",
                    line: 1,
                    column: 7,
                    end_line: 1,
                    end_column: 25,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 26,
}
